# magisterka

./: CMakeLists.txt  README.md  linux_build.sh
openmp_benchmarks/: CMakeLists.txt  descriptor.json  linux_build.sh  result_processing.ipynb  run_script.sh  validate.json
openmp_benchmarks/clang_results/linear/: out_1.csv  out_2.csv  out_3.csv  out_4.csv  out_5.csv  out_6.csv
openmp_benchmarks/clang_results/quicksort/: out_1.csv  out_2.csv  out_3.csv  out_4.csv  out_5.csv  out_6.csv
openmp_benchmarks/descriptors/: activation.json  batchnorm.json  conv.json  ctfft.json  emptyloop.json  linear.json  matmul.json  primetest.json  quicksort.json  wave.json
openmp_benchmarks/gcc_results/linear/: out_1.csv  out_2.csv  out_3.csv  out_4.csv  out_5.csv  out_6.csv
openmp_benchmarks/gcc_results/quicksort/: out_1.csv  out_2.csv  out_3.csv  out_4.csv  out_5.csv  out_6.csv
openmp_benchmarks/icc_results/linear/: out_1.csv  out_2.csv  out_3.csv  out_4.csv  out_5.csv  out_6.csv
openmp_benchmarks/icc_results/quicksort/: out_1.csv  out_2.csv  out_3.csv  out_4.csv  out_5.csv  out_6.csv
openmp_benchmarks/icx_results/linear/: out_1.csv  out_2.csv  out_3.csv  out_4.csv  out_5.csv  out_6.csv
openmp_benchmarks/include/: Activation.hpp  BatchNorm.hpp  BenchEngine.hpp  Benchmark.hpp  Convolution2D.hpp  Linear.hpp  QuickSort.hpp  WaveEquation.hpp  common.hpp
openmp_benchmarks/offloading_descriptors/: conv.json  linear.json  matmul.json  wave.json
openmp_benchmarks/src/: Activation.cpp  BatchNorm.cpp  BenchEngine.cpp  Convolution2D.cpp  CooleyTukeyFFT.cpp  EmptyForLoopBenchmark.cpp  Linear.cpp  MatrixMultiplication.cpp  OpenMPBenchmark.cpp  PrimeTest.cpp  QuickSort.cpp  WaveEquation.cpp
(+5440 files in other folders)
